infrastructure/cdk.out/RagNetwork-test.template.json
{
 "Resources": {
  "RagVpcF255D156": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "rag-vpc-test"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/Resource"
   }
  },
  "RagVpcpublicSubnet1SubnetFCBD8E3C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.10.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/Subnet"
   }
  },
  "RagVpcpublicSubnet1RouteTable8B413332": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/RouteTable"
   }
  },
  "RagVpcpublicSubnet1RouteTableAssociation225AEC56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcpublicSubnet1RouteTable8B413332"
    },
    "SubnetId": {
     "Ref": "RagVpcpublicSubnet1SubnetFCBD8E3C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "RagVpcpublicSubnet1DefaultRoute4729675D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RagVpcIGW99FB4ADC"
    },
    "RouteTableId": {
     "Ref": "RagVpcpublicSubnet1RouteTable8B413332"
    }
   },
   "DependsOn": [
    "RagVpcVPCGWC32343EC"
   ],
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/DefaultRoute"
   }
  },
  "RagVpcpublicSubnet1EIPC60579A0": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/EIP"
   }
  },
  "RagVpcpublicSubnet1NATGateway7982108B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "RagVpcpublicSubnet1EIPC60579A0",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "RagVpcpublicSubnet1SubnetFCBD8E3C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "RagVpcpublicSubnet1DefaultRoute4729675D",
    "RagVpcpublicSubnet1RouteTableAssociation225AEC56"
   ],
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet1/NATGateway"
   }
  },
  "RagVpcpublicSubnet2Subnet0657F9AA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.10.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet2/Subnet"
   }
  },
  "RagVpcpublicSubnet2RouteTableB0B7202A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet2/RouteTable"
   }
  },
  "RagVpcpublicSubnet2RouteTableAssociationF26482F2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcpublicSubnet2RouteTableB0B7202A"
    },
    "SubnetId": {
     "Ref": "RagVpcpublicSubnet2Subnet0657F9AA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "RagVpcpublicSubnet2DefaultRoute8F3D3507": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RagVpcIGW99FB4ADC"
    },
    "RouteTableId": {
     "Ref": "RagVpcpublicSubnet2RouteTableB0B7202A"
    }
   },
   "DependsOn": [
    "RagVpcVPCGWC32343EC"
   ],
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/publicSubnet2/DefaultRoute"
   }
  },
  "RagVpcprivateSubnet1Subnet01559DA9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.10.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet1/Subnet"
   }
  },
  "RagVpcprivateSubnet1RouteTable18E1424D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet1/RouteTable"
   }
  },
  "RagVpcprivateSubnet1RouteTableAssociation2438DC79": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcprivateSubnet1RouteTable18E1424D"
    },
    "SubnetId": {
     "Ref": "RagVpcprivateSubnet1Subnet01559DA9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "RagVpcprivateSubnet1DefaultRoute2D711B5D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RagVpcpublicSubnet1NATGateway7982108B"
    },
    "RouteTableId": {
     "Ref": "RagVpcprivateSubnet1RouteTable18E1424D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet1/DefaultRoute"
   }
  },
  "RagVpcprivateSubnet2Subnet34F37733": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.10.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet2/Subnet"
   }
  },
  "RagVpcprivateSubnet2RouteTable65DEDBBD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet2/RouteTable"
   }
  },
  "RagVpcprivateSubnet2RouteTableAssociationD56DBB7F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcprivateSubnet2RouteTable65DEDBBD"
    },
    "SubnetId": {
     "Ref": "RagVpcprivateSubnet2Subnet34F37733"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "RagVpcprivateSubnet2DefaultRoute335CD199": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RagVpcpublicSubnet1NATGateway7982108B"
    },
    "RouteTableId": {
     "Ref": "RagVpcprivateSubnet2RouteTable65DEDBBD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/privateSubnet2/DefaultRoute"
   }
  },
  "RagVpcisolatedSubnet1Subnet61457814": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.10.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet1/Subnet"
   }
  },
  "RagVpcisolatedSubnet1RouteTableFAAA4EA9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet1/RouteTable"
   }
  },
  "RagVpcisolatedSubnet1RouteTableAssociation030BEC46": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcisolatedSubnet1RouteTableFAAA4EA9"
    },
    "SubnetId": {
     "Ref": "RagVpcisolatedSubnet1Subnet61457814"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet1/RouteTableAssociation"
   }
  },
  "RagVpcisolatedSubnet2Subnet78EB2939": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.10.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet2/Subnet"
   }
  },
  "RagVpcisolatedSubnet2RouteTable6170D54A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/RagVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet2/RouteTable"
   }
  },
  "RagVpcisolatedSubnet2RouteTableAssociation305AC3B0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RagVpcisolatedSubnet2RouteTable6170D54A"
    },
    "SubnetId": {
     "Ref": "RagVpcisolatedSubnet2Subnet78EB2939"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/isolatedSubnet2/RouteTableAssociation"
   }
  },
  "RagVpcIGW99FB4ADC": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "rag-vpc-test"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/IGW"
   }
  },
  "RagVpcVPCGWC32343EC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "RagVpcIGW99FB4ADC"
    },
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/VPCGW"
   }
  },
  "RagVpcS3Endpoint4604A5D7": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "RagVpcprivateSubnet1RouteTable18E1424D"
     },
     {
      "Ref": "RagVpcprivateSubnet2RouteTable65DEDBBD"
     },
     {
      "Ref": "RagVpcpublicSubnet1RouteTable8B413332"
     },
     {
      "Ref": "RagVpcpublicSubnet2RouteTableB0B7202A"
     },
     {
      "Ref": "RagVpcisolatedSubnet1RouteTableFAAA4EA9"
     },
     {
      "Ref": "RagVpcisolatedSubnet2RouteTable6170D54A"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "rag-vpc-test"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/S3Endpoint/Resource"
   }
  },
  "RagVpcDynamoDBEndpointCCAF9C84": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "RagVpcprivateSubnet1RouteTable18E1424D"
     },
     {
      "Ref": "RagVpcprivateSubnet2RouteTable65DEDBBD"
     },
     {
      "Ref": "RagVpcpublicSubnet1RouteTable8B413332"
     },
     {
      "Ref": "RagVpcpublicSubnet2RouteTableB0B7202A"
     },
     {
      "Ref": "RagVpcisolatedSubnet1RouteTableFAAA4EA9"
     },
     {
      "Ref": "RagVpcisolatedSubnet2RouteTable6170D54A"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "rag-vpc-test"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "RagVpcF255D156"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/RagVpc/DynamoDBEndpoint/Resource"
   }
  },
  "VpcFlowLogGroup86559C69": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/rag/vpc-flow-logs/test",
    "RetentionInDays": 30
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/VpcFlowLogGroup/Resource"
   }
  },
  "VpcFlowLogIAMRoleB4DCB624": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "vpc-flow-logs.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/VpcFlowLog"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/VpcFlowLog/IAMRole/Resource"
   }
  },
  "VpcFlowLogIAMRoleDefaultPolicy7533133B": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "VpcFlowLogGroup86559C69",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "VpcFlowLogIAMRoleDefaultPolicy7533133B",
    "Roles": [
     {
      "Ref": "VpcFlowLogIAMRoleB4DCB624"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/VpcFlowLog/IAMRole/DefaultPolicy/Resource"
   }
  },
  "VpcFlowLogF72230C7": {
   "Type": "AWS::EC2::FlowLog",
   "Properties": {
    "DeliverLogsPermissionArn": {
     "Fn::GetAtt": [
      "VpcFlowLogIAMRoleB4DCB624",
      "Arn"
     ]
    },
    "LogDestinationType": "cloud-watch-logs",
    "LogGroupName": {
     "Ref": "VpcFlowLogGroup86559C69"
    },
    "ResourceId": {
     "Ref": "RagVpcF255D156"
    },
    "ResourceType": "VPC",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RagNetwork-test/VpcFlowLog"
     }
    ],
    "TrafficType": "ALL"
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/VpcFlowLog/FlowLog"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WQwWrDMBBEv6V3WS1u8wEhpCFQWuOUXIssq8kmstZIq5gi9O+VbCc+zdvRIGa35OXqjb88icEVsr0WGhoeDiTklSXrJyhZ8nDsJdv8mmO1YZVvNMiDb4yi7C1Uoyf1LRqtFn/x1s6hBEGA5hHOsN1XWT4F7QSpQfyxysIt4fLx3pCyie+Bqck8rSl1PXfKEJudVHZr2h7B0Bx9jO8ahw88ZXvGyDSeHA8JdxZ9n5/uHBmIjocap41GrTBtP1aYKEZWK4feyjHz5an3FJnBVvGLe76VK/6arntxAIX1hqBTvJ70Hwywrvx6AQAA"
   },
   "Metadata": {
    "aws:cdk:path": "RagNetwork-test/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "RagVpcF255D156"
   },
   "Export": {
    "Name": "rag-vpc-id-test"
   }
  },
  "ExportsOutputRefRagVpcF255D156A9DBD65D": {
   "Value": {
    "Ref": "RagVpcF255D156"
   },
   "Export": {
    "Name": "RagNetwork-test:ExportsOutputRefRagVpcF255D156A9DBD65D"
   }
  },
  "ExportsOutputRefRagVpcisolatedSubnet1Subnet61457814A97D6AFE": {
   "Value": {
    "Ref": "RagVpcisolatedSubnet1Subnet61457814"
   },
   "Export": {
    "Name": "RagNetwork-test:ExportsOutputRefRagVpcisolatedSubnet1Subnet61457814A97D6AFE"
   }
  },
  "ExportsOutputRefRagVpcprivateSubnet1Subnet01559DA95537357C": {
   "Value": {
    "Ref": "RagVpcprivateSubnet1Subnet01559DA9"
   },
   "Export": {
    "Name": "RagNetwork-test:ExportsOutputRefRagVpcprivateSubnet1Subnet01559DA95537357C"
   }
  },
  "ExportsOutputRefRagVpcprivateSubnet2Subnet34F37733460A9BF6": {
   "Value": {
    "Ref": "RagVpcprivateSubnet2Subnet34F37733"
   },
   "Export": {
    "Name": "RagNetwork-test:ExportsOutputRefRagVpcprivateSubnet2Subnet34F37733460A9BF6"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
